# hebron-autoxml

./: .gitignore  Gerar_Executavel_Windows.bat  HebronAutoXML.spec  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  test_err.txt  test_mocking.py  test_output.txt
.github/workflows/: build_windows.yml  release_windows.yml
docs/: mvp1_escopo_congelado.md
prova_tecnica/: 01_teste_certificado.py  02_teste_nfe.py  03_teste_cte.py  helpers.py
scratch/: diag_assinatura.py  teste_playwright.py  tester_e2e.py
scripts/: build_windows.bat  hebron_installer.iss
src/core/: captcha_solver.py  cert_manager.py  checkpoint_manager.py  classificador_tipo.py  config_manager.py  deduplicador.py  key_validator.py  matcher_xml.py  nsu_cache.py  offline_job.py  online_job.py  parser_excel.py  portal_scraper.py  sefaz_cte.py  sefaz_distnsu.py  sefaz_manifestacao.py  sefaz_nfe.py  sefaz_tools.py  triagem.py
src/gui/: app.py
src/io_reports/: report_writer.py  zipper.py
tests/: conftest.py  fixture_chaves.txt  smoke_test_online.py  smoke_test_realista.py  smoketest_runner.py  test_captcha_solver.py  test_checkpoint.py  test_classificador_tipo.py  test_deduplicacao.py  test_deduplicador.py  test_gui.py  test_gui_alerts.py  test_key_validator.py  test_manifestacao.py  test_matcher_xml.py  test_offline_core.py  test_offline_job.py  test_online_flow.py  test_parser_excel.py  test_parsing.py  test_portal_scraper.py  test_triagem.py
