[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hebron-autoxml"
version = "0.1.0"
description = "Automação de processamento de XMLs (Proof of Concept)"
requires-python = ">=3.11"
authors = [
    { name = "Developer" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
