[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hebron-autoxml"
version = "2.0.0"
description = "Processador offline de XMLs contábeis (NF-e/CT-e) - MVP 1"
requires-python = ">=3.11"
authors = [
    { name = "Developer" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
